adjust container width

--- a/.vscode/styles.css
+++ b/.vscode/styles.css
@@ -34,13 +34,8 @@ body* {
 }
 
 #container {
-  width: 360px;
-  /*
-  margin-top:56px ;
-  margin-right: auto;
-  margin-bottom: auto;
-  margin-left: auto;
-  */
+  width: 100%px;
+  max-width: 588px ;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
